wxc/include/ewxw/wxc_glue.h



/* ELJGridTable */
TClassDefExtend(ELJGridTable,wxGridTableBase)
TClass(ELJGridTable) ELJGridTable_Create( void* _obj, void* _EifGetNumberRows, void* _EifGetNumberCols, void* _EifGetValue, void* _EifSetValue, void* _EifIsEmptyCell, void* _EifClear, void* _EifInsertRows, void* _EifAppendRows, void* _EifDeleteRows, void* _EifInsertCols, void* _EifAppendCols, void* _EifDeleteCols, void* _EifSetRowLabelValue, void* _EifSetColLabelValue, void* _EifGetRowLabelValue, void* _EifGetColLabelValue );

void       ELJGridTable_Delete( TSelf(ELJGridTable) _obj );

TClass(wxView) ELJGridTable_GetView( TSelf(ELJGridTable) _obj );

void*      ELJGridTable_SendTableMessage( TSelf(ELJGridTable) _obj, int id, int val1, int val2 );

void       wxGrid_BlockToDeviceRect( TSelf(wxGrid) _obj, int top, int left, int bottom, int right, TRectOut(_x,_y,_w,_h) );

void       wxGrid_ClearSelection( TSelf(wxGrid) _obj );

TClass(wxGridCellEditor) wxGrid_GetDefaultEditorForCell( TSelf(wxGrid) _obj, int row, int col );

TClass(wxGridCellEditor) wxGrid_GetDefaultEditorForType( TSelf(wxGrid) _obj, TString typeName );

TClass(wxGridCellRenderer) wxGrid_GetDefaultRendererForCell( TSelf(wxGrid) _obj, int row, int col );

TClass(wxGridCellRenderer) wxGrid_GetDefaultRendererForType( TSelf(wxGrid) _obj, TString typeName );

void       wxGrid_GetSelectionBackground( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );

void       wxGrid_GetSelectionForeground( TSelf(wxGrid) _obj, TClassRef(wxColour) _ref );

TBool      wxGrid_IsInSelection( TSelf(wxGrid) _obj, int row, int col );

TBool      wxGrid_IsReadOnly( TSelf(wxGrid) _obj, int row, int col );

TBool      wxGrid_IsSelection( TSelf(wxGrid) _obj );

void       wxGrid_RegisterDataType( TSelf(wxGrid) _obj, TString typeName, TClass(wxGridCellRenderer) renderer, TClass(wxGridCellEditor) editor );

void       wxGrid_SelectAll( TSelf(wxGrid) _obj );

void       wxGrid_SelectBlock( TSelf(wxGrid) _obj, int topRow, int leftCol, int bottomRow, int rightCol, TBoolInt addToSelected );

void       wxGrid_SelectCol( TSelf(wxGrid) _obj, int col, TBoolInt addToSelected );

void       wxGrid_SelectRow( TSelf(wxGrid) _obj, int row, TBoolInt addToSelected );

void       wxGrid_SetMargins( TSelf(wxGrid) _obj, int extraWidth, int extraHeight );

void       wxGrid_SetReadOnly( TSelf(wxGrid) _obj, int row, int col, TBool isReadOnly );

void       wxGrid_SetSelectionBackground( TSelf(wxGrid) _obj, TClass(wxColour) c );

void       wxGrid_SetSelectionForeground( TSelf(wxGrid) _obj, TClass(wxColour) c );

void       wxGrid_GetSelectedCells(TSelf(wxGrid) _obj, TClassRef(wxGridCellCoordsArray) _arr);

void       wxGrid_GetSelectionBlockTopLeft(TSelf(wxGrid) _obj, TClassRef(wxGridCellCoordsArray) _arr);

void       wxGrid_GetSelectionBlockBottomRight(TSelf(wxGrid) _obj, TClassRef(wxGridCellCoordsArray) _arr);

TArrayLen  wxGrid_GetSelectedRows(TSelf(wxGrid) _obj, TArrayIntOutVoid _arr);

TArrayLen  wxGrid_GetSelectedCols(TSelf(wxGrid) _obj, TArrayIntOutVoid _arr);


/* wxGridCellWorker */
TClassDef(wxGridCellWorker)

/* wxGridEditorCreatedEvent */
TClassDefExtend(wxGridEditorCreatedEvent,wxCommandEvent)
int        wxGridEditorCreatedEvent_GetCol (TSelf(wxGridEditorCreatedEvent) _obj);

TClass(wxControl) wxGridEditorCreatedEvent_GetControl (TSelf(wxGridEditorCreatedEvent) _obj);

int        wxGridEditorCreatedEvent_GetRow (TSelf(wxGridEditorCreatedEvent) _obj);

void       wxGridEditorCreatedEvent_SetCol (TSelf(wxGridEditorCreatedEvent) _obj, int col);

void       wxGridEditorCreatedEvent_SetControl (TSelf(wxGridEditorCreatedEvent) _obj, TClass(wxControl) ctrl);

void       wxGridEditorCreatedEvent_SetRow (TSelf(wxGridEditorCreatedEvent) _obj, int row);


/* wxGridEvent */
TClassDefExtend(wxGridEvent,wxNotifyEvent)
TBool      wxGridEvent_AltDown (TSelf(wxGridEvent) _obj);

TBool      wxGridEvent_ControlDown (TSelf(wxGridEvent) _obj);

int        wxGridEvent_GetCol (TSelf(wxGridEvent) _obj);

void       wxGridEvent_GetPosition (TSelf(wxGridEvent) _obj, TPointOutVoid(x,y));

int        wxGridEvent_GetRow (TSelf(wxGridEvent) _obj);

TBool      wxGridEvent_MetaDown (TSelf(wxGridEvent) _obj);

TBool      wxGridEvent_Selecting (TSelf(wxGridEvent) _obj);

TBool      wxGridEvent_ShiftDown (TSelf(wxGridEvent) _obj);


/* wxGridRangeSelectEvent */
TClassDefExtend(wxGridRangeSelectEvent,wxNotifyEvent)
void       wxGridRangeSelectEvent_GetTopLeftCoords (TSelf(wxGridRangeSelectEvent) _obj, TPointOutVoid(col,row));

void       wxGridRangeSelectEvent_GetBottomRightCoords (TSelf(wxGridRangeSelectEvent) _obj, TPointOutVoid(col,row));

int        wxGridRangeSelectEvent_GetTopRow (TSelf(wxGridRangeSelectEvent) _obj);

int        wxGridRangeSelectEvent_GetBottomRow (TSelf(wxGridRangeSelectEvent) _obj);

int        wxGridRangeSelectEvent_GetLeftCol (TSelf(wxGridRangeSelectEvent) _obj);

int        wxGridRangeSelectEvent_GetRightCol (TSelf(wxGridRangeSelectEvent) _obj);

TBool      wxGridRangeSelectEvent_Selecting (TSelf(wxGridRangeSelectEvent) _obj);

TBool      wxGridRangeSelectEvent_ControlDown (TSelf(wxGridRangeSelectEvent) _obj);

TBool      wxGridRangeSelectEvent_MetaDown (TSelf(wxGridRangeSelectEvent) _obj);

TBool      wxGridRangeSelectEvent_ShiftDown (TSelf(wxGridRangeSelectEvent) _obj);

TBool      wxGridRangeSelectEvent_AltDown (TSelf(wxGridRangeSelectEvent) _obj);


/* wxGridSizeEvent */
TClassDefExtend(wxGridSizeEvent,wxNotifyEvent)
int        wxGridSizeEvent_GetRowOrCol (TSelf(wxGridSizeEvent) _obj);

void       wxGridSizeEvent_GetPosition (TSelf(wxGridSizeEvent) _obj, TPointOutVoid(x,y));

TBool      wxGridSizeEvent_ControlDown (TSelf(wxGridSizeEvent) _obj);

TBool      wxGridSizeEvent_MetaDown (TSelf(wxGridSizeEvent) _obj);

TBool      wxGridSizeEvent_ShiftDown (TSelf(wxGridSizeEvent) _obj);

TBool      wxGridSizeEvent_AltDown (TSelf(wxGridSizeEvent) _obj);